# sentient-market-reader

./: .env.local.example  .gitignore  .vercelignore  README.md  TUNING.md  analysis.json  btc_data.csv  depths-into-them.md  forecast.json  next.config.ts  package-lock.json  package.json  proxy.ts  test_mcp_server.py  tui.py
app/: globals.css  landing.module.css  layout.tsx  page.tsx
components/: AgentAllowancePanel.tsx  AgentPipeline.tsx  AgentStatsPanel.tsx  AgentTradeLog.tsx  BotPanel.tsx  CalibrationPanel.tsx  ChallengePanel.tsx  FloatingBackground.tsx  Header.tsx  HourlyHeader.tsx  MarketCard.tsx  MarkovPanel.tsx  PerformancePanel.tsx  PipelineHistory.tsx  PipelineIOPanel.tsx  PositionsPanel.tsx  PriceChart.tsx  SignalPanel.tsx  StrategyPanel.tsx  TerminalPreview.tsx  TradeLog.tsx
contexts/: AppwriteContext.tsx
data/: agent-config.json
hooks/: useAgentEngine.ts  useCountUp.ts  useHourlyAgentEngine.ts  useMarketTick.ts  usePipeline.ts
lib/: agent-shared.ts  agent-store-hourly.ts  agent-store.ts  appwrite-client.ts  appwrite-server.ts  claude-client.ts  coinmarketcap.ts  encryption.ts  get-request-user.ts  get-user-kalshi-creds.ts  indicators.ts  kalshi-auth.ts  kalshi-credentials.ts  kalshi-trade.ts  kalshi.ts  llm-client.ts  pipeline-lock.ts  server-agent-hourly.ts  server-agent.ts  trade-log.ts  types.ts
python-service/: .env.example  README.md  backtest.py  (+17 more)
sentient-trader-mcp/: .env.example  .gitignore  README.md  pyproject.toml
sentient-trader-mcp/.claude-plugin/: marketplace.json
sentient-trader-mcp/sentient_trader_mcp/: __init__.py  server.py
(+78 files in other folders)
